# AcousticIR-Unity

./: .gitignore  package.json
Editor/: MenuItems.cs  com.exenye.acoustic-ir.editor.asmdef
Editor/Gizmos/: AcousticRayGizmos.cs
Editor/Inspectors/: AcousticMaterialEditor.cs  AcousticProbeEditor.cs  AcousticSourceEditor.cs  AcousticZoneEditor.cs
Editor/Windows/: AcousticBakeWindow.cs  IRPreviewWindow.cs
NativePlugin~/: CMakeLists.txt
NativePlugin~/include/: ConvolutionEngine.h  FFTProcessor.h  IRBuffer.h  RingBuffer.h
NativePlugin~/src/: ConvolutionEngine.cpp  FFTProcessor.cpp  IRBuffer.cpp  PluginInterface.cpp
Runtime/: com.exenye.acoustic-ir.asmdef
Runtime/Config/: IRGenerationConfig.cs  RaytraceConfig.cs
Runtime/Core/: AcousticMath.cs  AcousticRaytracer.cs  AcousticTypes.cs  IRData.cs  IRGenerator.cs  RaytraceJob.cs
Runtime/DSP/: ConvolutionBridge.cs  IRCache.cs  WavExporter.cs
Runtime/Materials/: AcousticMaterial.cs  AcousticMaterialPresets.cs  AcousticSurface.cs
Runtime/Probes/: AcousticListener.cs  AcousticProbe.cs  AcousticSource.cs
Runtime/Zones/: AcousticZone.cs  AcousticZoneBlender.cs  AcousticZoneManager.cs
